--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "NumericalAnalysis"
 uuid = "0d97b697-bd25-42f5-83fa-54c1184dd8d3"
 authors = ["小雨 <xiaoyu@xiaoxiaoyu.me>"]
 version = "0.1.0"
+
+[deps]
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
